--- a/Pages/Data_Page.html
+++ b/Pages/Data_Page.html
@@ -42,8 +42,8 @@
         </nav>
         <section>
             <article>
-                <a target="_blank" href="ML_Points_vs_Price_lessthan1000.png">
-                    <img src="ML_Points_vs_Price_lessthan1000.png" alt="Points_vs_Price_lessthan1000" height="750">
+                <a target="_blank" href="..\Images\ML_Points_vs_Price_lessthan1000.png">
+                    <img src="..\Images\ML_Points_vs_Price_lessthan1000.png" alt="Points_vs_Price_lessthan1000" height="750">
             </article>
         </section>
         <br>
@@ -51,8 +51,8 @@
         <br>
         <section>
             <article>
-                <a target="_blank" href="ML_Points_vs_Price_histo.png">
-                    <img src="ML_Points_vs_Price_histo.png" alt="Points_vs_Price_histo" height="750">
+                <a target="_blank" href="..\Images\ML_Points_vs_Price_histo.png">
+                    <img src="..\Images\ML_Points_vs_Price_histo.png" alt="Points_vs_Price_histo" height="750">
             </article>
         </section>
         <br>
@@ -60,8 +60,8 @@
         <br>
         <section>
             <article>
-                <a target="_blank" href="ML_Points_vs_Price_transformed.png">
-                    <img src="ML_Points_vs_Price_transformed.png" alt="Points_vs_Price_transformed" height="750">
+                <a target="_blank" href="..\Images\ML_Points_vs_Price_transformed.png">
+                    <img src="..\Images\ML_Points_vs_Price_transformed.png" alt="Points_vs_Price_transformed" height="750">
                 </a>
             </article>
         </section>
@@ -70,8 +70,8 @@
         <br>
         <section>
             <article>
-                <a target="_blank" href="ML_Price_transformed_histo.png">
-                    <img src="ML_Price_transformed_histo.png" alt="Price_transformed_histo" height="750">
+                <a target="_blank" href="..\Images\ML_Price_transformed_histo.png">
+                    <img src="..\Images\ML_Price_transformed_histo.png" alt="Price_transformed_histo" height="750">
                 </a>
             </article>
         </section>
@@ -80,8 +80,8 @@
         <br>
         <section>
             <article>
-                <a target="_blank" href="ML_Points_histo.png">
-                    <img src="ML_Points_histo.png" alt="Points_histo" height="750">
+                <a target="_blank" href="..\Images\ML_Points_histo.png">
+                    <img src="..\Images\ML_Points_histo.png" alt="Points_histo" height="750">
                 </a>
             </article>
         </section>
@@ -90,8 +90,8 @@
         <br>
         <section>
             <article>
-                <a target="_blank" href="Continent_vs_Price (1).png">
-                    <img src="Continent_vs_Price (1).png" alt="Continent_vs_Price" height="750">
+                <a target="_blank" href="..\Images\Continent_vs_Price (1).png">
+                    <img src="..\Images\Continent_vs_Price (1).png" alt="Continent_vs_Price" height="750">
                 </a>
             </article>
         </section>
@@ -100,8 +100,8 @@
         <br>
         <section>
             <article>
-                <a target="_blank" href="Country_vs_Price.png">
-                    <img src="Country_vs_Price.png" alt="Country_vs_Price" height="750">
+                <a target="_blank" href="..\Images\Country_vs_Price.png">
+                    <img src="..\Images\Country_vs_Price.png" alt="Country_vs_Price" height="750">
                 </a>
             </article>
         </section>
@@ -110,8 +110,8 @@
         <br>
         <section>
             <article>
-                <a target="_blank" href="ML_residual_plot.png">
-                    <img src="ML_residual_plot.png" alt="ML_residual_plot" height="750">
+                <a target="_blank" href="..\Images\ML_residual_plot.png">
+                    <img src="..\Images\ML_residual_plot.png" alt="ML_residual_plot" height="750">
                 </a>
             </article>
         </section>
@@ -120,8 +120,8 @@
         <br>
         <section>
             <article>
-                <a target="_blank" href="old.new_vs_Price.png">
-                    <img src="old.new_vs_Price.png" alt="old.new_vs_Price" height="750">
+                <a target="_blank" href="..\Images\old.new_vs_Price.png">
+                    <img src="..\Images\old.new_vs_Price.png" alt="old.new_vs_Price" height="750">
                 </a>
             </article>
         </section>
@@ -130,8 +130,8 @@
         <br>
         <section>
             <article>
-                <a target="_blank" href="Points_vs_Price.png">
-                    <img src="Points_vs_Price.png" alt="Points_vs_Price" height="750">
+                <a target="_blank" href="..\Images\Points_vs_Price.png">
+                    <img src="..\Images\Points_vs_Price.png" alt="Points_vs_Price" height="750">
                 </a>
             </article>
         </section>
