--- a/Pages/Features.html
+++ b/Pages/Features.html
@@ -43,8 +43,8 @@
         <section>
             <h1>Wine Cloud</h1>
             <article>
-                <a target="_blank" href="wine_cloud.png">
-                    <img src="wine_cloud.png" alt="Wine Cloud" height="750">
+                <a target="_blank" href="..\Images\wine_cloud.png">
+                    <img src="..\Images\wine_cloud.png" alt="Wine Cloud" height="750">
                 </a>
                 <p>We created a word cloud of the wine descriptions so we could see which terms were most prevalent when describing the different wines.</p>
             </article>
@@ -55,8 +55,8 @@
         <section>
             <h1>Countries</h1>
             <article>
-                <a target="_blank" href="countries.png">
-                    <img src="countries.png" alt="Countries" height="750">
+                <a target="_blank" href="..\Images\countries.png">
+                    <img src="..\Images\countries.png" alt="Countries" height="750">
                 </a>
                 <p>The US offers the most bottles by far with Italy and France being the natural next biggest producers.</p>
             </article>
@@ -67,8 +67,8 @@
         <section>
             <h1>Wineries</h1>
             <article>
-                <a target="_blank" href="map.png">
-                    <img src="map.png" alt="Countries" height="750">
+                <a target="_blank" href="..\Images\Map.png">
+                    <img src="..\Images\Map.png" alt="Countries" height="750">
                 </a>
                 <p>The US also has the most wineries in the world.</p>
             </article>
