price page edit

--- a/Pages/Pricing.html
+++ b/Pages/Pricing.html
@@ -41,7 +41,7 @@
             </div>
         </nav>
         <p>
-            Under Developement
+            In Developement
             <!-- <?php
 
       $host = 'localhost';
